RESOLVED FIXED140098
REGRESSION(r177925): It broke the !ENABLE(INSPECTOR) build
https://bugs.webkit.org/show_bug.cgi?id=140098
Summary REGRESSION(r177925): It broke the !ENABLE(INSPECTOR) build
Csaba Osztrogonác
Reported 2015-01-05 14:09:02 PST
error log: In file included from ../../Source/WebCore/page/ContentSecurityPolicy.cpp:35:0: ../../Source/WebCore/inspector/InspectorInstrumentation.h:144:12: error: 'InspectorInstrumentationCookie' does not name a type ../../Source/WebCore/inspector/InspectorInstrumentation.h:145:39: error: 'InspectorInstrumentationCookie' does not name a type ../../Source/WebCore/inspector/InspectorInstrumentation.h:145:69: error: ISO C++ forbids declaration of 'parameter' with no type [-fpermissive] ../../Source/WebCore/inspector/InspectorInstrumentation.h:146:12: error: 'InspectorInstrumentationCookie' does not name a type ../../Source/WebCore/inspector/InspectorInstrumentation.h:147:59: error: 'InspectorInstrumentationCookie' does not name a type ...
Attachments
Patch (5.52 KB, patch)
2015-01-09 07:55 PST, Csaba Osztrogonác
no flags
Patch (4.36 KB, patch)
2015-01-09 08:30 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-01-09 07:55:10 PST
Brian Burg
Comment 2 2015-01-09 07:58:25 PST
Comment on attachment 244341 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=244341&action=review > Source/WebCore/loader/appcache/ApplicationCacheGroup.cpp:582 > +#endif It is my understanding that all callsites into InspectorInstrumentation should not be guarded, since they are defined even if !ENABLE(INSPECTOR) and there are ENABLE(INSPECTOR) guards inside those methods. Is this file missing an #include or something to make it not compile? I would prefer to not have guards here.
Csaba Osztrogonác
Comment 3 2015-01-09 08:26:34 PST
m_currentResourceIdentifier is inside ENABLE(INSPECTOR) guard which caused build failure in ApplicationCacheGroup.cpp. Unguarding fixes the build without changing the cpp.
Csaba Osztrogonác
Comment 4 2015-01-09 08:30:09 PST
Csaba Osztrogonác
Comment 5 2015-01-09 08:40:54 PST
Just a note, there were a discussion on IRC if !INSPECTOR build is useful or not. I checked the stripped binary size of the EFL WebKit library on x86_64. Disabling inspector decreases the original 43Mb with 1.2Mb, circa 2.8%.
Brian Burg
Comment 6 2015-01-09 10:45:35 PST
Comment on attachment 244344 [details] Patch Thanks!
WebKit Commit Bot
Comment 7 2015-01-09 11:27:55 PST
Comment on attachment 244344 [details] Patch Clearing flags on attachment: 244344 Committed r178177: <http://trac.webkit.org/changeset/178177>
WebKit Commit Bot
Comment 8 2015-01-09 11:27:58 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.