REGRESSION(r177925): It broke the !ENABLE(INSPECTOR) build https://bugs.webkit.org/show_bug.cgi?id=140098

Reviewed by Brian Burg.

Source/JavaScriptCore:

* inspector/InspectorBackendDispatcher.h: Missing ENABLE(INSPECTOR) guard added.

Source/WebCore:

* inspector/InspectorInstrumentationCookie.cpp: Removed ENABLE(INSPECTOR) guard,
becaue InspectorInstrumentationCookie is used everywhere unconditionally.
* inspector/InspectorInstrumentationCookie.h: Removed ENABLE(INSPECTOR) guard.
* loader/appcache/ApplicationCacheGroup.h: Removed ENABLE(INSPECTOR) guard around
m_currentResourceIdentifier, because it is used unconditionally in the cpp.


Canonical link: https://commits.webkit.org/158264@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178177 268f45cc-cd09-0410-ab3c-d52691b4dbfc