Source/JavaScriptCore/inspector/InspectorBackendDispatcher.h
@@ -27,6 +27,8 @@
 #ifndef InspectorBackendDispatcher_h
 #define InspectorBackendDispatcher_h
 
+#if ENABLE(INSPECTOR)
+
 #include "InspectorProtocolTypes.h"
 #include <wtf/PassRefPtr.h>
 #include <wtf/RefCounted.h>
@@ -104,4 +106,5 @@ private:
 
 } // namespace Inspector
 
+#endif // ENABLE(INSPECTOR)
 #endif // !defined(InspectorBackendDispatcher_h)
